derive/tests/snapshots/creation_default/Loan/get_all_loans.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `loan` table.
    pub fn get_all_loans<'a>(&'a self) -> impl Iterator<Item = Loan> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().loan().iter()
    }
}
