derive/tests/snapshots/creation_default/Loan/get_loans_by_branch_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get a `Loan` iterator that contains all rows in the `loan` table whose value matches the value from the single-column btree index on the `branch_id` column.
    pub fn get_loans_by_branch_id<'a>(
        &'a self,
        branch_id: impl Into<BranchId>,
    ) -> impl Iterator<Item = Loan> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().loan().branch_id().filter(branch_id.into().value())
    }
}
impl<T: crate::spacetimedsl::ReadContext> crate::spacetimedsl::ReadOnlyDSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get a `Loan` iterator that contains all rows in the `loan` table whose value matches the value from the single-column btree index on the `branch_id` column.
    pub fn get_loans_by_branch_id<'a>(
        &'a self,
        branch_id: impl Into<BranchId>,
    ) -> impl Iterator<Item = Loan> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().loan().branch_id().filter(branch_id.into().value())
    }
}
