derive/tests/snapshots/creation_default/Loan/wrapper_methods.snap
---
source: derive/src/characterization_tests.rs
---
impl BranchId {
    /**Get all `Loan` rows whose `branch_id` column references this `BranchId`.

Use it like `branch_id.get_loans(&dsl)`.*/
    pub fn get_loans<'a, T: 'a + crate::spacetimedsl::ReadContext>(
        &self,
        dsl: impl Into<crate::spacetimedsl::ReadOnlyDSL<'a, T>>,
    ) -> Vec<Loan> {
        dsl.into().get_loans_by_branch_id(self).collect()
    }
}
impl LoanId {
    /**Get the row of the `branch` table which the `branch_id` column of the `Loan` row with this `LoanId` references.

Use it like `loan_id.get_branch(&dsl)`.*/
    pub fn get_branch<'a, T: 'a + crate::spacetimedsl::ReadContext>(
        &self,
        dsl: impl Into<crate::spacetimedsl::ReadOnlyDSL<'a, T>>,
    ) -> Result<
        <self::branch__TableHandle as ::spacetimedb::Table>::Row,
        crate::spacetimedsl::error::SpacetimeDSLError,
    > {
        let dsl = dsl.into();
        let loan = dsl.get_loan_by_id(self)?;
        if loan.branch_id == 0 {
            return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                table_name: "branch".into(),
                column_names_and_row_values: format!("{{ id : {} }}", 0).into(),
            });
        }
        dsl.get_branch_by_id(loan.get_branch_id())
    }
}
